Copied changes from central

--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -47,7 +47,8 @@ contacts_search_placesholder=Buscar…
 new_contact_button=Nuevo contacto
 new_contact_name_placeholder=Nombre
 new_contact_email_placeholder=Correo
-new_contact_phone_placeholder=Teléfono Firefox OS
+new_contact_fxos_phone_placeholder=Teléfono Firefox OS
+new_contact_phone_placeholder2=Teléfono
 contacts_blocked_contacts=Contactos bloqueados
 add_contact_button=Añadir contacto
 valid_email_text_description=Por favor, ingrese una dirección de correo válida
@@ -56,8 +57,8 @@ import_contacts_button=Importar
 importing_contacts_progress_button=Importando…
 sync_contacts_button=Sincronizar contactos
 import_failed_description_simple=Lo sentimos, la importación de contactos falló
-import_failed_description=Lo sentimos, la importación de contactos falló, por favor vea nuestro {{import_failed_support_link_label}} para ayuda
-import_failed_support_link_label=sitio de soporte
+import_failed_description_some=Algunos contactos no pudieron ser importados
+import_failed_support_button=Ayuda
 remove_contact_menu_button=Remover contacto
 confirm_delete_contact_alert=¿Estás seguro de querer eliminar este contacto?
 confirm_delete_contact_remove_button=Remover contacto
@@ -146,6 +147,8 @@ rooms_list_delete_tooltip=Borrar conversación
 rooms_list_deleteConfirmation_label=¿Está seguro?
 rooms_list_no_current_conversations=No hay conversaciones en este momento
 rooms_name_this_room_label=Ponle un nombre a esta conversación
+rooms_name_this_room_tooltip2=Haz clic para editar el nombre de la conversación
+rooms_name_change_failed_label=La conversación no puede ser renombrada
 rooms_new_room_button_label=Empezar una conversación
 rooms_only_occupant_label=Es el primero aquí.
 rooms_panel_title=Escoge una conversación o inicia una nueva
@@ -154,3 +157,4 @@ rooms_room_full_call_to_action_nonFx_label=Descargar {{brandShortname}} para ini
 rooms_room_full_call_to_action_label=Aprender más acerca de {{clientShortname}} »
 rooms_room_joined_label=¡Alguien se ha unido a la conversación!
 rooms_room_join_label=Unirse a la conversación
+rooms_signout_alert=Las conversaciones abiertas serán cerradas
