--- a/es-CL/browser/chrome/browser/search.properties
+++ b/es-CL/browser/chrome/browser/search.properties
@@ -3,16 +3,11 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 searchtip=Buscar usando %S
-
-# LOCALIZATION NOTE (cmd_pasteAndSearch): "Search" is a verb, this is the
-# search bar equivalent to the url bar's "Paste & Go"
+searchPlaceholder=Buscar
+searchHeader=Búsqueda de %S
 cmd_pasteAndSearch=Pegar y buscar
-
 cmd_clearHistory=Limpiar el historial de búsqueda
 cmd_clearHistory_accesskey=L
-
 cmd_showSuggestions=Mostrar sugerencias
 cmd_showSuggestions_accesskey=s
-
 cmd_addFoundEngine=Agregar "%S"
-
