--- a/es-CL/browser/chrome/browser/devtools/timeline.properties
+++ b/es-CL/browser/chrome/browser/devtools/timeline.properties
@@ -38,4 +38,31 @@ timeline.records=REGISTROS
 timeline.label.styles=Estilos
 timeline.label.reflow=Reflujo
 timeline.label.paint=Dibujo
+timeline.label.javascript=Javascript
 timeline.label.domevent=Evento DOM
+timeline.label.consoleTime=Consola
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Inicio:
+timeline.markerDetail.end=Término:
+timeline.markerDetail.duration=Duración:
+timeline.markerDetail.consoleTimerName=Nombre del contador:
+timeline.markerDetail.DOMEventType=Tipo de evento:
+timeline.markerDetail.DOMEventPhase=Fase:
+timeline.markerDetail.DOMEventTargetPhase=Selección
+timeline.markerDetail.DOMEventCapturingPhase=Captura
+timeline.markerDetail.DOMEventBubblingPhase=Empaquetamiento
