copied files from aurora

--- a/sv-SE/dom/chrome/layout/css.properties
+++ b/sv-SE/dom/chrome/layout/css.properties
@@ -21,6 +21,8 @@ PEGatherMediaEOF=slut på medialista i @import eller @media-regel
 PEGatherMediaNotComma=Väntade sig ”,” i medialistan, men fann ”%1$S”.
 PEGatherMediaNotIdent=Väntade sig identifierare i medialistan, men fann ”%1$S”.
 PEGatherMediaReservedMediaType=Hittade reserverade nyckelordet ”%1$S” vid sökning efter mediatyp.
+PEParseSourceSizeListEOF=längdvärde för matchande mediavillkor
+PEParseSourceSizeListNotComma=Väntade sig ',' efter värdet men fann ”%1$S”.
 PEImportNotURI=Väntade sig en URI i @import-regel, men fann ”%1$S”.
 PEImportBadURI=Ogiltig URI i @import-regel: ”%1$S”.
 PEImportUnexpected=Hittade oväntat ”%1$S” i @import.
@@ -44,8 +46,17 @@ PESelectorListExtraEOF=”,” eller ”{”
 PESelectorListExtra=Väntade sig ”,” eller ”{”, men fann ”%1$S”.
 PESelectorGroupNoSelector=Väntade sig en selektor.
 PESelectorGroupExtraCombinator=Kvardröjande kombinator.
+PECounterStyleNotIdent=Väntade sig en identifierare för namn på @counter-style-regel.
+PECounterStyleBadName=Namnet på @font-face-regel kan inte vara '%1$S'.
+PECounterStyleBadBlockStart=Väntade sig "{" som början på @counter-style-regel, men fann ”%1$S”.
+PECounterStyleEOF=avslutande "}" för @counter-style-avsnitt
+PECounterDescExpected=Väntade sig en räknare-deskriptor, men fann ”%1$S”.
+PEUnknownCounterDesc=Okänd deskriptor ”%1$S” i @counter-style-regel.
+PECounterExtendsNotIdent=Väntade sig en identifierare för extends-algoritmen, men fann ”%1$S”.
+PECounterASWeight=Varje värde i beskrivningen av symboler för numrerad lista måste vara mindre än den föregående värdet.\u0020
 PEClassSelEOF=klassnamn
 PEClassSelNotIdent=Väntade sig en identifierare för klasselektorn, men fann ”%1$S”.
+PECoordinatePair=Väntade sig ett koordinatpar, men fann '%1$S'.
 PETypeSelEOF=elementtyp
 PETypeSelNotType=Väntade sig ett elementnamn eller ”*”, men fann ”%1$S”.
 PEUnknownNamespacePrefix=Okänt namnrymdsprefix ”%1$S”.
@@ -95,6 +106,9 @@ PEColorSaturationEOF=mättnad
 PEColorLightnessEOF=ljusstyrka
 PEColorOpacityEOF=opacitet i färgvärde
 PEExpectedNumber=Väntade sig ett nummer, men fann ”%1$S”.
+PEPositionEOF=<position>
+PEExpectedPosition=Väntade sig en <position>, men fann '%1$S'.
+PEExpectedRadius=Förväntade sig en radie, men fann '%1$S'.
 PEExpectedCloseParen=Väntade sig ”)”, men fann ”%1$S”.
 PEDeclEndEOF=”;” eller ”}” för att avsluta deklaration
 PEParseDeclarationNoColon=Väntade sig ”:”, men fann ”%1$S”.
