--- a/sv-SE/dom/chrome/accessibility/AccessFu.properties
+++ b/sv-SE/dom/chrome/accessibility/AccessFu.properties
@@ -7,28 +7,28 @@ screenReaderStarted = Skärmläsare startad
 screenReaderStopped = Skärmläsare stoppad
 
 # Roles
-menubar        =       menyfält
+menubar        =       menyrad
 scrollbar      =       rullningslist
 grip           =       grepp
-alert          =       meddelande
+alert          =       avisering
 menupopup      =       meny
 document       =       dokument
 pane           =       panel
 dialog         =       dialogruta
-separator      =       avskiljare
+separator      =       avgränsare
 toolbar        =       verktygsfält
 statusbar      =       statusfält
 table          =       tabell
-columnheader   =       kolumnhuvud
-rowheader      =       radhuvud
+columnheader   =       kolumnrubrik
+rowheader      =       radrubrik
 column         =       kolumn
 row            =       rad
 cell           =       cell
 link           =       länk
 list           =       lista
-listitem       =       listpost
-outline        =       schema
-outlineitem    =       schemapost
+listitem       =       listobjekt
+outline        =       kontur
+outlineitem    =       kontur objekt
 pagetab        =       flik
 propertypage   =       egenskapssida
 graphic        =       grafik
@@ -53,8 +53,8 @@ radiomenuitem  =       alternativmenypost
 textcontainer  =       textutrymme
 togglebutton   =       växlingsknapp
 treetable      =       trädtabell
-header         =       huvud
-footer         =       fot
+header         =       sidhuvud
+footer         =       sidfot
 paragraph      =       paragraf
 entry          =       post
 caption        =       rubrik
@@ -64,7 +64,7 @@ form           =       formulär
 comboboxlist   =       kombinationsrutelista
 comboboxoption =       kombinationsrutealternativ
 imagemap       =       bildkarta
-listboxoption  =       listrutealternativ
+listboxoption  =       alternativ
 listbox        =       listruta
 flatequation   =       enkel ekvation
 gridcell       =       rutnätscell
@@ -85,7 +85,7 @@ textInputType_tel    =       telefon
 textInputType_url    =       URL
 
 # More sophisticated object descriptions
-headingLevel   =       huvudnivå %S
+headingLevel   =       rubriknivå %S
 
 # more sophisticated list announcement
 listStart      =       Första post
@@ -94,11 +94,10 @@ listEnd        =       Sista post
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 post;#1 poster
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S av %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S av %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +107,14 @@ main           =       allmänt
 navigation     =       navigation
 search         =       sök
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S med %S och %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 kolumn;#1 kolumner
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = med 1 kolumn;med #1 kolumner
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 rad;#1 rader
+tblRowInfo = och 1 rad;och #1 rader
 
 # table or grid cell information
 columnInfo = Kolumn %S
@@ -151,14 +147,17 @@ tabLoading     =      laddar
 tabLoaded      =      laddad
 tabNew         =      ny flik
 tabLoadStopped =      laddning avbruten
-tabReload      =      hämta om
+tabReload      =      ladda om
 
 # Object states
 stateChecked     =    markerad
 stateNotChecked  =    omarkerad
+statePressed     =    nedtryckt
+# No string for a not pressed toggle button
 stateExpanded    =    utfälld
 stateCollapsed   =    infälld
 stateUnavailable =    otillgänglig
+stateReadonly    =    skrivskyddad
 stateRequired    =    begärd
 stateTraversed   =    besökt
 stateHasPopup    =    har popup
@@ -177,29 +176,96 @@ quicknav_Landmark    = Landmärken
 quicknav_Entry       = Poster
 quicknav_FormElement = Formulärelement
 quicknav_Graphic     = Bilder
-quicknav_Heading     = Huvuden
+quicknav_Heading     = Rubriker
 quicknav_ListItem    = Listposter
 quicknav_Link        = Länkar
 quicknav_List        = Listor
 quicknav_PageTab     = Sidflikar
 quicknav_RadioButton = Alternativknappar
-quicknav_Separator   = Avskiljare
+quicknav_Separator   = Avgränsare
 quicknav_Table       = Tabeller
 quicknav_Checkbox    = Kryssrutor
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
+menubarAbbr        =       menyrad
+scrollbarAbbr      =       rullningslist
+gripAbbr           =       grepp
+alertAbbr          =       alarm
+menupopupAbbr      =       meny
+documentAbbr       =       dokument
+paneAbbr           =       panel
+dialogAbbr         =       dialogruta
+separatorAbbr      =       avgränsare
+toolbarAbbr        =       verktygsfält
+statusbarAbbr      =       statusrad
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       kolumnhuvud
+rowheaderAbbr      =       radhuvud
+columnAbbr         =       kolumn
+rowAbbr            =       rad
+cellAbbr           =       cell
+linkAbbr           =       lnk
+listAbbr           =       lista
+listitemAbbr       =       listpost
+outlineAbbr        =       disposition
+outlineitemAbbr    =       dispositionsobjekt
+pagetabAbbr        =       flik
+propertypageAbbr   =       egenskapssida
+graphicAbbr        =       grafik
+pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       kryssruta
+radiobuttonAbbr    =       alternativknapp
+comboboxAbbr       =       kombinationsruta
+progressbarAbbr    =       förloppsindikator
+sliderAbbr         =       skjutreglage
+spinbuttonAbbr     =       rotationsknapp
+diagramAbbr        =       diagram
+animationAbbr      =       animation
+equationAbbr       =       ekvation
+buttonmenuAbbr     =       knappmeny
+whitespaceAbbr     =       mellanrum
+pagetablistAbbr    =       fliklista
+canvasAbbr         =       canvas
+checkmenuitemAbbr  =       menypost med kryssruta
+labelAbbr          =       etikett
+passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       radiomenypost
+textcontainerAbbr  =       textutrymme
+togglebuttonAbbr   =       växlingsknapp
+treetableAbbr      =       trädtabell
+headerAbbr         =       huvud
+footerAbbr         =       fot
+paragraphAbbr      =       paragraf
+entryAbbr          =       post
+captionAbbr        =       rubrik
+headingAbbr        =       överskrift
+sectionAbbr        =       sektion
+formAbbr           =       formulär
+comboboxlistAbbr   =       kombinationsrutelista
+comboboxoptionAbbr =       kombinationsrutealternativ
+imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       alternativ
+listboxAbbr        =       listruta
+flatequationAbbr   =       enkel ekvation
+gridcellAbbr       =       rutnätscell
+noteAbbr           =       anteckning
+figureAbbr         =       fig
+definitionlistAbbr =       definitionslista
+termAbbr           =       term
+definitionAbbr     =       definition
+textareaAbbr       =       txtarea
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1k;#1k
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1k;#1k
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = k%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
