--- a/pl/browser/chrome/browser/shellservice.properties
+++ b/pl/browser/chrome/browser/shellservice.properties
@@ -13,6 +13,9 @@ setDefaultBrowserNotNow.label=Zapytaj później
 setDefaultBrowserNotNow.accesskey=Z
 setDefaultBrowserNever.label=Nie pytaj ponownie
 setDefaultBrowserNever.accesskey=N
+setDefaultBrowserTitle=Domyślna przeglądarka
+setDefaultBrowserMessage=Ustawić program %S jako domyślną przeglądarkę (obecnie nią nie jest)?
+setDefaultBrowserDontAsk=Zawsze sprawdzaj podczas uruchamiania programu %S
 desktopBackgroundLeafNameWin=Tapeta pulpitu.bmp
 DesktopBackgroundDownloading=Zapisywanie obrazka…
 DesktopBackgroundSet=Ustaw tapetę pulpitu
