Aviary.pl bug 4978 - Brakujący przecinek w webide.properties

--- a/pl/browser/chrome/browser/devtools/webide.properties
+++ b/pl/browser/chrome/browser/devtools/webide.properties
@@ -31,7 +31,7 @@ error_operationTimeout=Przekroczono limit czasu dla „%1$S”.
 error_operationFail=Operacja „%1$S” nie powiodła się.
 error_cantConnectToApp=Nie można połączyć się z aplikacją „%1$S”
 error_cantFetchAddonsJSON=Nie można pobrać listy dodatków: %S
-error_appProjectsLoadFailed=Nie można wczytać listy projektów. Błąd może wystąpić jeśli wcześniej była uruchamiana nowsza wersja Firefoksa na tym profilu.
+error_appProjectsLoadFailed=Nie można wczytać listy projektów. Błąd może wystąpić, jeśli wcześniej była uruchamiana nowsza wersja Firefoksa na tym profilu.
 
 addons_stable=stabilny
 addons_unstable=rozwijany
