--- a/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,6 +99,8 @@ quit-button.tooltiptext.mac = Avsluta %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Starta en konversation
 
 social-share-button.label = Dela den här sidan
 social-share-button.tooltiptext = Dela den här sidan
