[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -46,6 +46,7 @@ display_name_available_status=Tillgänglig
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=Tyvärr lyckades vi inte ta emot en samtals-URL.
 session_expired_error_description=Sessionen har gått ut. Alla URL:er du tidigare har skapat och delat kommer inte längre fungera.
 could_not_authenticate=Kunde inte erhålla behörighet
 password_changed_question=Ändrade du ditt lösenord?
@@ -97,6 +98,7 @@ new_contact_button=Ny Kontakt
 new_contact_name_placeholder=Namn
 new_contact_email_placeholder=E-post
 new_contact_fxos_phone_placeholder=Firefox OS Telefon\u0020
+new_contact_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Blockerade Kontakter
 
@@ -126,6 +128,7 @@ sync_contacts_button=Synkronisera Kontakter
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Tyvärr misslyckades kontaktimporten
+import_failed_description_some=Vissa kontakter kunde inte importeras
 import_failed_support_button=Hjälp
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
@@ -310,3 +313,4 @@ rooms_room_full_call_to_action_nonFx_label=Ladda ner {{brandShortname}} för att
 rooms_room_full_call_to_action_label=Lär dig mer om {{clientShortname}} »
 rooms_room_joined_label=Någon har gått med i konversationen!
 rooms_room_join_label=Gå med i konversation
+rooms_signout_alert=Öppna konversationer kommer att stängas
