[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -461,6 +461,8 @@ social.marklinkMenu.label=Salvar link no %S
 social.error.message=O %1$S está impossibilitado de conectar-se com o %2$S neste momento.
 social.error.tryAgain.label=Tentar de novo
 social.error.tryAgain.accesskey=T
+social.error.closeSidebar.label=Fechar este painel
+social.error.closeSidebar.accesskey=c
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
 social.aria.toolbarButtonBadgeText=%1$S (%2$S)
@@ -559,6 +561,8 @@ getUserMedia.sharingMenuUnknownHost = Origem desconhecida
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = O %S aparenta iniciar… muito… lentamente.
+slowStartup.disableNotificationButton.label = Não me informe novamente
+slowStartup.disableNotificationButton.accesskey = a
 
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
