--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -10,6 +10,7 @@ clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Entre na conversa
 
 share_link_header_text=Compartilhe este link para convidar alguém para conversar:
 invite_header_text=Convide alguém para se juntar a você.
@@ -59,6 +60,7 @@ problem_accessing_account=Houve um problema ao acessar sua conta
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Tentar de novo
 
+share_email_subject4={{clientShortname}} — Entrar na conversa
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_button=Email
@@ -92,6 +94,7 @@ new_contact_button=Novo contato
 new_contact_name_placeholder=Nome
 new_contact_email_placeholder=Email
 new_contact_fxos_phone_placeholder=Telefone Firefox OS
+new_contact_phone_placeholder2=Telefone
 
 
 ## LOCALIZATION NOTE (add_contact_button):
