[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
+++ b/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
@@ -39,7 +39,7 @@ projecteditor.deleteFolderPromptMessage=Tem certeza que deseja excluir esta past
 # LOCALIZATION NOTE (projecteditor.deleteFilePromptMessage):
 # This string is displayed as as the message of the confirm prompt that checks
 # to make sure if a file should be removed.
-projecteditor.deleteFilePromptMessage=Tem certeza que deseja excluir este aquivo?
+projecteditor.deleteFilePromptMessage=Tem certeza que deseja excluir este arquivo?
 
 # LOCALIZATION NOTE (projecteditor.newLabel):
 # This string is displayed as a menu item for adding a new file to
