--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -96,6 +96,7 @@ new_contact_email_placeholder=Email
 new_contact_fxos_phone_placeholder=Telefone Firefox OS
 new_contact_phone_placeholder2=Telefone
 
+contacts_blocked_contacts=Contatos bloqueados
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
@@ -123,6 +124,7 @@ sync_contacts_button=Sincronizar contatos
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Desculpe, a importação de contatos falhou
+import_failed_description_some=Alguns contatos não podem ser importados
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -180,6 +182,7 @@ initiate_call_button_label2=Pronto para iniciar a conversa?
 incoming_call_title2=Pedido de conversa
 incoming_call_accept_button=Aceitar
 incoming_call_accept_audio_only_tooltip=Aceitar com voz
+incoming_call_accept_audio_video_tooltip=Aceitar com vídeo
 incoming_call_cancel_button=Cancelar
 incoming_call_cancel_and_block_button=Cancelar e bloquear
 incoming_call_block_button=Bloquear
@@ -252,6 +255,7 @@ legal_text_privacy = aviso de privacidade
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
+powered_by_beforeLogo=Powered by
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Como foi sua conversa?
@@ -297,3 +301,5 @@ rooms_room_full_label=Já há duas pessoas nesta conversa.
 rooms_room_full_call_to_action_nonFx_label=Baixe o {{brandShortname}} para iniciar o seu próprio
 rooms_room_full_call_to_action_label=Saiba mais sobre o {{clientShortname}} »
 rooms_room_joined_label=Alguém entrou na conversa!
+rooms_room_join_label=Entre na conversa
+rooms_signout_alert=As conversas abertas serão fechadas
