--- a/pt-BR/browser/chrome/browser/places/places.properties
+++ b/pt-BR/browser/chrome/browser/places/places.properties
@@ -28,6 +28,14 @@ sortByNameGeneric=Ordenar pelo nome
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
+view.sortBy.1.name.label=Ordenar pelo nome
+view.sortBy.1.name.accesskey=n
+view.sortBy.1.description.label=Ordenar pela descrição
+view.sortBy.1.description.accesskey=d
+view.sortBy.1.lastModified.label=Ordenar pela data de modificação
+view.sortBy.1.lastModified.accesskey=m
+view.sortBy.1.tags.label=Ordenar pela tag
+view.sortBy.1.tags.accesskey=t
 
 searchBookmarks=Localizar nos favoritos
 searchHistory=Localizar no histórico
