--- a/pt-BR/dom/chrome/dom/dom.properties
+++ b/pt-BR/dom/chrome/dom/dom.properties
@@ -210,3 +210,4 @@ KeyNameDeadKeysWarning=Os valores de KeyboardEvent.key iniciando com “Dead” 
 ImportXULIntoContentWarning=A importação de nós XUL em um documento de conteúdo não deve mais ser usada. Esta funcionalidade pode ser removida em breve.
 XMLDocumentLoadPrincipalMismatch=O uso de document.load não é permitido em documentos originados em outras janelas. Somente a janela que criou o documento é permitida chamar .load naquele documento. Preferencialmente, use XMLHttpRequest no lugar.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Uma transação IndexedDB que ainda não estava completa foi abortada devido a navegação na página.
