--- a/pt-BR/browser/chrome/browser/downloads/downloads.properties
+++ b/pt-BR/browser/chrome/browser/downloads/downloads.properties
@@ -57,6 +57,7 @@ blockedUncommon=Pode não ser seguro abrir este arquivo.
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Tem certeza de que deseja desbloquear este arquivo?
 unblockTypeMalware=Este arquivo contém um vírus ou outro malware que irá danificar seu computador.
 unblockTypePotentiallyUnwanted=Este arquivo, disfarçado como um download útil, vai fazer alterações inesperadas em seus programas e configurações.
 unblockTypeUncommon=Este arquivo foi baixado de um site desconhecido e potencialmente perigoso e pode não ser seguro abri-lo.
