--- a/pt-BR/dom/chrome/layout/css.properties
+++ b/pt-BR/dom/chrome/layout/css.properties
@@ -105,6 +105,8 @@ PEColorSaturationEOF=saturação
 PEColorLightnessEOF=luminosidade
 PEColorOpacityEOF=opacidade no valor da cor
 PEExpectedNumber=Esperado um número mas encontrado “%1$S”.
+PEPositionEOF=<position>
+PEExpectedPosition=Esperado <position> mas encontrado '%1$S'.
 PEExpectedCloseParen=Esperado “)” mas encontrado “%1$S”.
 PEDeclEndEOF=“;” ou “}” para terminar a declaração
 PEParseDeclarationNoColon=Esperado “:” mas encontrado “%1$S”.
