updated latvian translation

--- a/lv/browser/chrome/browser/loop/loop.properties
+++ b/lv/browser/chrome/browser/loop/loop.properties
@@ -168,7 +168,7 @@ rooms_list_copy_url_tooltip=Kopēt saiti
 rooms_list_current_conversations=Aktīvā saruna;Aktīvā saruna;Aktīvās sarunas
 rooms_list_delete_tooltip=Dzēst sarunu
 rooms_list_deleteConfirmation_label=Vai tiešām?
-rooms_list_no_current_conversations=NAv aktīvās sarunas
+rooms_list_no_current_conversations=Nav nevienas sarunas
 rooms_name_this_room_label=Nosauciet šo sarunu
 rooms_new_room_button_label=Sākt sarunu
 rooms_only_occupant_label=Jūs šeit esat pirmais.
