[th] update from Pootle (firefox)

--- a/th/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/th/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,11 +99,20 @@ quit-button.tooltiptext.mac = ออกจาก %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = เริ่มการสนทนา
 
+social-share-button.label = แบ่งปันหน้านี้
+social-share-button.tooltiptext = แบ่งปันหน้านี้
 
+panic-button.label = ลืมซะ
+panic-button.tooltiptext = ลืมประวัติการท่องเว็บบางส่วน
 
 web-apps-button.label = แอป
+web-apps-button.tooltiptext = ค้นพบแอพส์
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = เปิด WebIDE (%S)
