--- a/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,7 +97,9 @@ quit-button.tooltiptext.linux2 = %1$S afsluiten (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S afsluiten (%2$S)
 
-loop-call-button2.label = Een gesprek beginnen
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
 loop-call-button3.tooltiptext = Een gesprek beginnen
 
 social-share-button.label = Deze pagina delen
