--- a/nl/browser/chrome/browser/loop/loop.properties
+++ b/nl/browser/chrome/browser/loop/loop.properties
@@ -46,7 +46,7 @@ display_name_available_status=Beschikbaar
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-unable_retrieve_url=Sorry, ophalen van een gespreks-url is niet gelukt.
+unable_retrieve_url=Sorry, ophalen van een gespreks-URL is niet gelukt.
 session_expired_error_description=Sessie verlopen. Alle eerder aangemaakte en gedeelde URL’s zullen niet meer werken.
 could_not_authenticate=Authenticatie niet gelukt
 password_changed_question=Hebt u uw wachtwoord gewijzigd?
