--- a/nl/browser/chrome/browser/loop/loop.properties
+++ b/nl/browser/chrome/browser/loop/loop.properties
@@ -97,7 +97,8 @@ new_contact_button=Nieuw contact
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Naam
 new_contact_email_placeholder=E-mailadres
-new_contact_phone_placeholder=Firefox OS-telefoon
+new_contact_fxos_phone_placeholder=Firefox OS-telefoon
+new_contact_phone_placeholder2=Telefoon
 
 contacts_blocked_contacts=Geblokkeerde contacten
 
@@ -122,17 +123,13 @@ importing_contacts_progress_button=Importeren…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Contacten synchroniseren
+
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Sorry, importeren van contacten mislukt
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Sorry, importeren van contacten mislukt. Bekijk onze {{import_failed_support_link_label}} voor hulp
-import_failed_support_link_label=ondersteuningswebsite
+import_failed_description_some=Een aantal contacten konden niet worden geïmporteerd
+import_failed_support_button=Help
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -309,6 +306,8 @@ rooms_list_delete_tooltip=Gesprek verwijderen
 rooms_list_deleteConfirmation_label=Weet u het zeker?
 rooms_list_no_current_conversations=Geen huidige gesprekken
 rooms_name_this_room_label=Dit gesprek een naam geven
+rooms_name_this_room_tooltip2=Klik om de gespreksnaam te bewerken
+rooms_name_change_failed_label=Gesprek kan niet hernoemd worden
 rooms_new_room_button_label=Een gesprek beginnen
 rooms_only_occupant_label=U bent de eerste hier.
 rooms_panel_title=Kies of begin een nieuw gesprek
@@ -317,3 +316,4 @@ rooms_room_full_call_to_action_nonFx_label=Download {{brandShortname}} om zelf e
 rooms_room_full_call_to_action_label=Meer info over {{clientShortname}} »
 rooms_room_joined_label=Iemand neemt deel aan het gesprek!
 rooms_room_join_label=Deelnemen aan het gesprek
+rooms_signout_alert=Open gesprekken zullen gesloten worden
