Bug 1078740 Add tracking controls to security notification bar

--- a/nl/suite/chrome/common/dataman/dataman.properties
+++ b/nl/suite/chrome/common/dataman/dataman.properties
@@ -32,6 +32,7 @@ perm.script.label=Scripts uitvoeren
 perm.stylesheet.label=Stylesheets laden
 perm.sts/use.label=Strict Transport Security gebruiken
 perm.sts/subd.label=Strict Transport Security op subdomeinen toepassen
+perm.trackingprotection.label=Volgactiviteit
 
 perm.type.default=Een type selecteren
 
