--- a/nl/suite/chrome/common/notification.properties
+++ b/nl/suite/chrome/common/notification.properties
@@ -179,8 +179,10 @@ updatePromptCheckButton.accesskey=C
 SecurityTitle=Beveiligingswaarschuwing
 MixedContentMessage=U hebt een beveiligde pagina opgevraagd die niet-versleutelde informatie bevat. Informatie die u op deze pagina ziet of invult kan gemakkelijk worden gelezen door derden.
 MixedActiveContentMessage=U hebt een beveiligde pagina opgevraagd die niet-beveiligde informatie bevat. Informatie die u op deze pagina ziet of invult kan gemakkelijk worden gelezen door derden.
+TrackingContentMessage=Delen van deze pagina kunnen wellicht uw online-activiteit volgen.
 MixedDisplayContentMessage=U hebt een pagina opgevraagd die slechts gedeeltelijk versleuteld is en zal afluisteren niet voorkomen.
 BlockedActiveContentMessage=Niet-beveiligde informatie op deze pagina is geblokkeerd.
+BlockedTrackingContentMessage=Delen van de pagina die uw online-activiteit volgen zijn geblokkeerd.
 BlockedDisplayContentMessage=Niet-versleutelde informatie op deze pagina is geblokkeerd.
 EnterInsecureMessage=U hebt een beveiligde pagina verlaten. Informatie die u vanaf nu verzendt of ontvangt kan gemakkelijk worden gelezen door derden.
 EnterSecureMessage=U hebt een beveiligde pagina opgevraagd. De website heeft zich correct geïdentificeerd en informatie die u ziet of invoert kan niet gemakkelijk worden gelezen door derden.
