New strings for Firefox + corrections

--- a/da/webapprt/webapprt/overrides/appstrings.properties
+++ b/da/webapprt/webapprt/overrides/appstrings.properties
@@ -29,7 +29,7 @@ externalProtocolUnknown=<Ukendt>
 externalProtocolChkMsg=Husk mit valg for alle links af denne type.
 externalProtocolLaunchBtn=Start applikation
 malwareBlocked=Dette websted (%S) er blevet anmeldt som et angrebswebsted og blokeres i overensstemmelse med dine sikkerhedsindstillinger.
-phishingBlocked=Dette websted (%S) er blevet anmeldt som netsvindel og blokerers i overensstemmelse med dine sikkerhedsindstillinger.
+phishingBlocked=Dette websted (%S) er blevet anmeldt som netsvindel og blokeres i overensstemmelse med dine sikkerhedsindstillinger.
 cspBlocked=Programmet forsøgte at tilgå en ressource med en indholdssikkerhedspolitik, der forhindrer den i at blive indlæst på denne måde.
 corruptedContentError=Programmet kan ikke fortsætte, da der er fundet en fejl i transmissionen af data.
 remoteXUL=Programmet forsøgte at bruge en ikke-understøttet teknologi som ikke længere er tilgængelig.
