--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -97,7 +97,7 @@ new_contact_button=Ny kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Navn
 new_contact_email_placeholder=Mailadresse
-new_contact_phone_placeholder=Firefox OS-telefon
+new_contact_fxos_phone_placeholder=Firefox OS-telefon
 
 contacts_blocked_contacts=Blokerede kontakter
 
@@ -126,16 +126,8 @@ sync_contacts_button=Synkroniser kontakter
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Beklager, import af kontakter mislykkedes
-import_failed_description_some=Ikke alle kontakterne kunne importeres
+import_failed_description_some=Ikke alle kontakter kunne importeres
 import_failed_support_button=Hjælp
-
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Beklager, import af kontakter mislykkedes. Læs vores {{import_failed_support_link_label}} for hjælp
-import_failed_support_link_label=supportwebsted
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -314,6 +306,8 @@ rooms_list_delete_tooltip=Slet samtale
 rooms_list_deleteConfirmation_label=Er du sikker?
 rooms_list_no_current_conversations=Ingen aktuelle samtaler
 rooms_name_this_room_label=Navngiv denne samtale
+rooms_name_this_room_tooltip2=Klik for at redigere samtalens navn
+rooms_name_change_failed_label=Samtalen kan ikke omdøbes
 rooms_new_room_button_label=Start en samtale
 rooms_only_occupant_label=Du er den første til stede
 rooms_panel_title=Vælg en samtale eller start en ny
@@ -322,3 +316,4 @@ rooms_room_full_call_to_action_nonFx_label=Hent {{brandShortname}} for at starte
 rooms_room_full_call_to_action_label=Læs mere om {{clientShortname}} »
 rooms_room_joined_label=Nogen har sluttet sig til samtalen
 rooms_room_join_label=Vær med i samtalen
+rooms_signout_alert=Åbne samtaler vil blive slettet
