[hr] update from Pootle (firefox)

--- a/hr/toolkit/chrome/global/aboutSupport.properties
+++ b/hr/toolkit/chrome/global/aboutSupport.properties
@@ -84,3 +84,5 @@ minLibVersions = Očekivana najmanja inačica
 loadedLibVersions = Korištena inačica
 
 hasSeccompBPF = Seccomp-BPF (filtriranje sistemskih poziva)
+canSandboxContent = Sandboxing sadržajnog procesa
+canSandboxMedia = Sandboxing media priključka
