--- a/sq/mobile/chrome/region.properties
+++ b/sq/mobile/chrome/region.properties
@@ -2,11 +2,18 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+# LOCALIZATION NOTE: REVIEW_REQUIRED
+# Please do not commit any changes to this file without a review from
+# the l10n-drivers team (this includes en-US). In order to get one,
+# please file a bug, add the "productization" keyword and CC l10n@mozilla.com.
+
 # Default search engine
 browser.search.defaultenginename=Google
 
-# Search engine order (order displayed in the search bar dropdown)s
+# Search engine order (order displayed in the search bar dropdown)
 browser.search.order.1=Google
+browser.search.order.2=Yahoo
+browser.search.order.3=Bing
 
 # This is the default set of web based feed handlers shown in the reader
 # selection UI
