Forgot to commit

--- a/es-CL/dom/chrome/appstrings.properties
+++ b/es-CL/dom/chrome/appstrings.properties
@@ -29,6 +29,6 @@ externalProtocolChkMsg = Recordar mi elección para todos los enlaces de este ti
 externalProtocolLaunchBtn = Lanzar aplicación
 malwareBlocked = El sitio web %S ha sido reportado como un sitio malicioso y fue bloqueado basado en sus preferencias de seguridad.
 phishingBlocked = El sitio web %S ha sido reportado como un sitio fraudulento diseñado para engañar usuarios para que compartan información personal o financiera.
-cspFrameAncestorBlocked = Esta página tiene una política de seguridad de contenido que evita que sea incrustada de esta forma.
+cspBlocked=Esta página tiene una política de seguridad de contenido que previene sea cargada de esta manera.
 corruptedContentError = La página que está tratando de ver no puede mostrarse porque se detectó un error en la transmisión de los datos.
 remoteXUL = Esta página usa una tecnología no admitida que ya no está disponible por defecto.
