--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -56,7 +56,7 @@ add_or_import_contact_title=Añadir o importar contacto
 import_contacts_button=Importar
 importing_contacts_progress_button=Importando…
 sync_contacts_button=Sincronizar contactos
-import_failed_description=Lo sentimos, la importación de contactos falló, por favor vea nuestro {{import_failed_support_link_label}} para ayuda
+import_failed_description_simple=Lo sentimos, la importación de contactos falló
 import_failed_description_some=Algunos contactos no pudieron ser importados
 import_failed_support_button=Ayuda
 remove_contact_menu_button=Remover contacto
