[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/devtools/timeline.properties
+++ b/hr/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=SNIMKE
 timeline.label.styles=Stilovi
 timeline.label.reflow=Protutok
 timeline.label.paint=Boja
+timeline.label.javascript=Javascript
 timeline.label.domevent=DOM događaji
 timeline.label.consoleTime=Konzola
 
@@ -56,3 +57,11 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Pokreni:
+timeline.markerDetail.end=Kraj:
+timeline.markerDetail.duration=Trajanje:
+timeline.markerDetail.consoleTimerName=Naziv mjerača:
+timeline.markerDetail.DOMEventType=Vrsta događaja:
+timeline.markerDetail.DOMEventPhase=Faza:
+timeline.markerDetail.DOMEventTargetPhase=Cilj
+timeline.markerDetail.DOMEventCapturingPhase=Snimanje
+timeline.markerDetail.DOMEventBubblingPhase=Mjehurenje
