--- a/hr/browser/chrome/browser/loop/loop.properties
+++ b/hr/browser/chrome/browser/loop/loop.properties
@@ -46,6 +46,7 @@ display_name_available_status=Dostupan
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=Žao nam je, ali nismo mogli dobiti URL poziva.
 session_expired_error_description=Sesija istekla. Svi URL-ovi koje ste ranije stvorili i podijelili više neće funkcionirati.
 could_not_authenticate=Autentikacija nije uspjela
 password_changed_question=Jeste li promijenili vašu lozinku?
@@ -97,6 +98,7 @@ new_contact_button=Novi kontakt
 new_contact_name_placeholder=Naziv
 new_contact_email_placeholder=E-pošta
 new_contact_fxos_phone_placeholder=Firefox OS telefon
+new_contact_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Blokirani kontakti
 
@@ -126,6 +128,8 @@ sync_contacts_button=Sinkroniziraj kontakte
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Uvoz kontakta nije uspio
+import_failed_description_some=Neki kontakti nisu mogli biti uvezeni
+import_failed_support_button=Pomoć
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -283,6 +287,7 @@ feedback_rejoin_button=Ponovno se pridruži
 ## an abusive user.
 feedback_report_user_button=Prijavi korisnika
 
+help_label=Pomoć
 tour_label=Obilazak
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
@@ -300,6 +305,8 @@ rooms_list_delete_tooltip=Obriši razgovor
 rooms_list_deleteConfirmation_label=Jeste li sigurni?
 rooms_list_no_current_conversations=Nema trenutnih razgovora
 rooms_name_this_room_label=Dodijeli ime ovom razgovoru
+rooms_name_this_room_tooltip2=Kliknite za promjenu naziva razgovora
+rooms_name_change_failed_label=Razgovor se ne može preimenovati.
 rooms_new_room_button_label=Započni razgovor
 rooms_only_occupant_label=Prvi ste ovdje.
 rooms_panel_title=Odaberite razgovor ili započnite novi
@@ -308,3 +315,4 @@ rooms_room_full_call_to_action_nonFx_label=Preuzmite {{brandShortname}} da biste
 rooms_room_full_call_to_action_label=Saznajte više o {{clientShortname}} »
 rooms_room_joined_label=Netko se pridružio razgovoru!
 rooms_room_join_label=Pridružite se razgovoru
+rooms_signout_alert=Otvoreni razgovori će se zatvoriti
