--- a/hr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hr/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Certifikat je potpisan koristeći al
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Poslužitelj koristi "key pinning" (HPKP), ali nije moguće sastaviti nijedan lanac certifikata koji odgovara pinsetu. "Key pinning" prekršaji se ne mogu zaobići.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Poslužitelj koristi certifikat s proširenjem osnovnih uvjeta koji ga identificiraju kao certifikacijsku kuću. Za ispravno izdan certifikat, ovo ne bi smio biti slučaj.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Poslužitelj je prezentirao certifikat s ključem premale dužine za uspostavljanje sigurne veze.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=X.509 certifikat inačice 1 koji nema potvrđenu vjerodostojnost je korišten za izdavanje certifikata poslužitelja. X.509 certifikati inačice 1 su zastarjeli i ne bi se smjeli koristiti za potpisivanje drugih certifikata.
