--- a/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,7 +99,11 @@ quit-button.tooltiptext.mac = Zatvori %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Pozdrav
+loop-call-button3.tooltiptext = Započni razgovor
 
+social-share-button.label = Podijeli ovu stranicu
+social-share-button.tooltiptext = Podijeli ovu stranicu
 
 panic-button.label = Zaboravi
 panic-button.tooltiptext = Zaboravi neke dijelove povijesti pretraživanja
@@ -111,3 +115,4 @@ web-apps-button.tooltiptext = Otkrijte aplikacije
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Otvori WebIDE (%S)
