--- a/hr/browser/chrome/browser/devtools/gclicommands.properties
+++ b/hr/browser/chrome/browser/devtools/gclicommands.properties
@@ -22,6 +22,7 @@ helpAvailable=Dostupne naredbe
 
 # LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
 # is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Naredba '%1$S' nije dostupna u višeprocesnom načinu rada (E10S)
 
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
