[qa] browser, loop, dom, mobile: fixing translation of "online"

--- a/sr/browser/chrome/browser/loop/loop.properties
+++ b/sr/browser/chrome/browser/loop/loop.properties
@@ -232,7 +232,7 @@ generic_failure_no_reason2=Желите ли да покушате поново?
 ## LOCALIZATION NOTE (contact_offline_title): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the contact is offline.
-contact_offline_title=Ова особа није онлајн
+contact_offline_title=Ова особа није на мрежи
 ## LOCALIZATION NOTE (call_timeout_notification_text): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the call didn't go through.
