--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -438,7 +438,7 @@ syncPromoNotification.addons.description=Ви можете мати доступ
 syncPromoNotification.addons-sync-disabled.description=Ви можете використовувати ваш обліковий запис %S, щоб синхронізувати додатки на багатьох пристроях.\u0020
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
-dataReportingNotification.message       = %1$S автоматично відправляє деякі дані у %2$S, щоб ми могли покращити ваш досвід.
+dataReportingNotification.message       = %1$S автоматично відправляє деякі дані у %2$S, щоб зробити його кращим.
 dataReportingNotification.button.label  = Вибрати чим ділитись
 dataReportingNotification.button.accessKey  = В
 
