Bug 1109435 - pad missing chatzilla l10n with english strings, so we can build. r=callek (myself) a=callek (myself) for CLOSED TREE (if its closed)

--- a/ca/extensions/irc/chrome/chatzilla.properties
+++ b/ca/extensions/irc/chrome/chatzilla.properties
@@ -998,6 +998,9 @@ msg.logfile.write.error = No s'ha pogut escriure al fitxer <%S>. L'opció està 
 msg.logging.icon.off = El registre està desactivat. Feu clic a la icona per iniciar a registrar la vista.
 msg.logging.icon.on  = El registre està activat. Feu clic a la icona per deixar de registrar la vista.
 
+msg.alert.icon.off = Message notifications are off. Click the icon to start showing notifications for new messages.
+msg.alert.icon.on  = Message notifications are on. Click the icon to stop showing notifications for new messages.
+
 msg.already.connected = Ja esteu connectat a ``%S''.
 msg.enter.nick = Si us plau, seleccioneu un sobrenom
 msg.network.connecting = S'està intentant connectar a ``%S''. Utilitzeu /cancel per a interrompre-ho.
@@ -1267,6 +1270,14 @@ msg.supports.flagsOn = Aquest servidor SÍ suporta: %S.
 msg.supports.flagsOff = Aquest servidor NO suporta: %S.
 msg.supports.miscOption = «%S=%S»
 msg.supports.miscOptions = Paràmetres/límits del servidor: %S.
+msg.supports.caps = Supported capabilities: %S"
+msg.supports.capsOn = Enabled capabilities: %S"
+
+
+msg.caps.list = Available capabilities: %S"
+msg.caps.on = Capability %S enabled.
+msg.caps.off = Capability %S disabled.
+msg.caps.error = Capability %S is invalid.
 
 
 msg.conf.mode.on = S'ha habilitat el mode conferència per a aquesta visualització. S'ocultaran les entrades, sortides, desconnexions i els canvis de sobrenom.
@@ -1398,6 +1409,20 @@ msg.prefs.global = Configuració global
 
 pref.activityFlashDelay.label = Retard de l'activitat d'intermitència
 pref.activityFlashDelay.help = Quan una pestanya que ja tenia activitat, en rep més, aquesta es farà intermitent per a indicar-ho. Aquesta preferència és la longitud de la intermitència en miŀlisegons: 0 l'inhabilita.
+pref.alert.globalEnabled.label  = Globally enabled
+pref.alert.globalEnabled.help   = When enabled, all alerts configured may be shown. When disabled, no alerts will be shown. Provides nothing more than a global toggle.
+pref.alert.enabled.label        = Enabled
+pref.alert.enabled.help         = When enabled, popups are shown for this view.
+pref.alert.nonFocusedOnly.label = Only when window not active
+pref.alert.nonFocusedOnly.help  = When enabled, all message notifications are supressed when the window is active. Otherwise, message notifications for non-active views will be shown. Unchecking is suggested for channel moderators or for low traffic channels.
+pref.alert.channel.event.label  = Alert for Channel Event
+pref.alert.channel.event.help   = Shows message notifications for joins, parts, kicks, usermodes, and any other system messages. Suggested for channel moderators or for low traffic channels.
+pref.alert.channel.chat.label   = Alert for Channel Chat
+pref.alert.channel.chat.help    = Show message notifications for normal chat messages. It may be annoying for high traffic channels. Suggested for moderators or for low traffic channels.
+pref.alert.channel.stalk.label  = Alert for Channel Stalk
+pref.alert.channel.stalk.help   = Shows message notifications for messages containing stalk words.
+pref.alert.user.chat.label      = Alert for User Chat
+pref.alert.user.chat.help       = Shows message notifications for private messages.
 pref.aliases.label = Ordre d'àlies
 pref.aliases.help = Us permet fer dreceres a diverses ordres o seqüència d'ordres. Cada element és de la forma «nom <name> \= llista d'ordres <command-list>», amb ordres (sense la capçalera «/») i els seus paràmetres, cadascun separat per «;». L'àlies canvia automàticament a l'ordre quan s'inicia el ChatZilla. 
 pref.autoAwayCap.label = Límit de detecció automàtica d'absència de l'usuari
@@ -1416,6 +1441,8 @@ pref.awayIdleMsg.label          = Missatge d'absent automàtic
 pref.awayIdleMsg.help           = El missatge d'absent del ChatZilla que s'utilitzarà quan no hi sigueu.
 pref.awayNick.label = Sobrenom (absent)
 pref.awayNick.help = Aquest sobrenom s'utilitzarà automàticament quan us marqueu com absent si és diferent del vostre 'Sobrenom'. Podeu deixar-lo en blanc si no voleu canviar el vostre sobrenom quan estigueu absent.
+pref.bugKeyword.label           = Bug Keywords
+pref.bugKeyword.help            = You can define multiple issue tracker keywords as a regular expression perhaps by separating them with "|" e.g. bug|issue|case|ticket
 pref.bugURL.label = URL del Bugzilla
 pref.bugURL.help = L'URL utilitzat per a enllaçar als errors. «%s» es reemplaça amb el número de l'error o l'àlies. «bug » seguit d'un número, o bé «#» i un mot de 1-20 lletres (àlies de l'error) es convertirà en un enllaç que utilitza aquest URL.
 pref.bugURL.comment.label       = URL del Bugzilla URL per als comentaris
@@ -1597,6 +1624,8 @@ pref.group.general.label = General
 pref.group.general.connect.label = Connexió
 pref.group.general.ident.label = Identificació
 pref.group.general.log.label = Registre
+pref.group.general.palert.label        = Message notifications
+pref.group.global.palertconfig.label   = Message notifications configuration
 pref.group.appearance.label = Aparença
 pref.group.appearance.misc.label = Misceŀlània
 pref.group.appearance.motif.label = Aparences
@@ -1626,9 +1655,9 @@ pref.group.global.log.help = Especifica l'estat de registre per defecte per a le
 pref.group.global.maxLines.label = Mida del desplaçament endarrere
 pref.group.global.maxLines.help = El nombre de línies de text que es poden conservar en aquest tipus de visualització. Una vegada s'arriba al límit, les línies més antigues són eliminades a mesura que s'afegeixen les més noves.
 pref.group.global.sounds.label = Configuració del so
-pref.group.global.sounds.help          = 
-pref.group.global.soundEvts.label = Incidències sonores
-pref.group.global.soundEvts.help = Sons per a certes incidències del client. Aquestes preferències són una llista separada per espais de «beep» o un fitxer: URLs.
+pref.group.general.sounds.help          = 
+pref.group.general.soundEvts.label = Incidències sonores
+pref.group.general.soundEvts.help = Sons per a certes incidències del client. Aquestes preferències són una llista separada per espais de «beep» o un fitxer: URLs.
 
 
 pref.networkHeader.label = Xarxes
