Bug 1109435 - pad missing chatzilla l10n with english strings, so we can build. r=callek (myself) a=callek (myself) for CLOSED TREE (if its closed)

--- a/cs/extensions/irc/chrome/chatzilla.properties
+++ b/cs/extensions/irc/chrome/chatzilla.properties
@@ -1682,9 +1682,9 @@ pref.group.global.log.help=Nastaví předvolený způsob záznamů oken. Každé
 pref.group.global.maxLines.label=Velikost historie
 pref.group.global.maxLines.help=Počet řádek textu, které budou uchovávány pro tento typ oken. Pokud bude dosažen tento limit, nejstarší řádky budou umazávány tak jak nové budou přibývat.
 pref.group.global.sounds.label=Konfigurace zvuku
-pref.group.global.sounds.help=
-pref.group.global.soundEvts.label=Zvukové události
-pref.group.global.soundEvts.help=Zvuky pro některé klientské události. Tyto volby jsou seznam mezerou oddělených řetězců „beep“ nebo „file:URL“.
+pref.group.general.sounds.help=
+pref.group.general.soundEvts.label=Zvukové události
+pref.group.general.soundEvts.help=Zvuky pro některé klientské události. Tyto volby jsou seznam mezerou oddělených řetězců „beep“ nebo „file:URL“.
 
 # These are the prefs that get grouped #
 
