Bug 1109435 - pad missing chatzilla l10n with english strings, so we can build. r=callek (myself) a=callek (myself) for CLOSED TREE (if its closed)

--- a/nb-NO/extensions/irc/chrome/chatzilla.properties
+++ b/nb-NO/extensions/irc/chrome/chatzilla.properties
@@ -1682,9 +1682,9 @@ pref.group.global.log.help             = Setter standard loggingstatus for visni
 pref.group.global.maxLines.label       = Tilbakerullingstørrelse
 pref.group.global.maxLines.help        = Antall linjer som skal beholdes i denne visningstypen. Når grensen nås vil de eldste linjene fjernes når nye linjer legges til.
 pref.group.global.sounds.label         = Lydinnstillinger
-pref.group.global.sounds.help          =
-pref.group.global.soundEvts.label      = Lydhendelser
-pref.group.global.soundEvts.help       = Lyder for enkelte klienthendelser. Disse innstillingene er en ordskiller-atskilt liste med enten "beep" eller file:-URL-er.
+pref.group.general.sounds.help          =
+pref.group.general.soundEvts.label      = Lydhendelser
+pref.group.general.soundEvts.help       = Lyder for enkelte klienthendelser. Disse innstillingene er en ordskiller-atskilt liste med enten "beep" eller file:-URL-er.
 
 # These are the prefs that get grouped #
 
