--- a/it/extensions/irc/chrome/chatzilla.properties
+++ b/it/extensions/irc/chrome/chatzilla.properties
@@ -1285,9 +1285,9 @@ pref.group.global.log.help = Imposta lo stato predefinito di log per le viste. O
 pref.group.global.maxLines.label = Dimensione conversazioni memorizzate
 pref.group.global.maxLines.help = Il numero di linee di testo da memorizzare in questo tipo di vista. Una volta raggiunto il limite, le linee più vecchie vengono rimosse all'aggiunta di nuove linee.
 pref.group.global.sounds.label = Configurazione suoni
-pref.group.global.sounds.help = 
-pref.group.global.soundEvts.label = Eventi con suono
-pref.group.global.soundEvts.help = I suoni da emettere per certi eventi del client. Queste preferenze sono una lista separata da spazi di "beep" o URL di tipo file:.
+pref.group.general.sounds.help = 
+pref.group.general.soundEvts.label = Eventi con suono
+pref.group.general.soundEvts.help = I suoni da emettere per certi eventi del client. Queste preferenze sono una lista separata da spazi di "beep" o URL di tipo file:.
 pref.autoperform.label = Esegui in automatico
 pref.autoperform.help = Inserire un comando da eseguire quando ci si connette a questa rete/si entra in questo canale/si apre una chat privata con questo utente. I comandi sono eseguiti nell'ordine elencato.
 pref.autoperform.channel.label = Canale
@@ -1334,3 +1334,32 @@ pref.queryBeep.label = Messaggio di richiesta
 pref.queryBeep.help = 
 pref.stalkBeep.label = Suoni: messaggio importante
 pref.stalkBeep.help = 
+
+# Append missing english strings to end of file
+# Ensuring SeaMonkey 2.32 can build
+msg.alert.icon.off = Message notifications are off. Click the icon to start showing notifications for new messages.
+msg.alert.icon.on  = Message notifications are on. Click the icon to stop showing notifications for new messages.
+msg.supports.caps = Supported capabilities: %S"
+msg.supports.capsOn = Enabled capabilities: %S"
+msg.caps.list = Available capabilities: %S"
+msg.caps.on = Capability %S enabled.
+msg.caps.off = Capability %S disabled.
+msg.caps.error = Capability %S is invalid.
+pref.alert.globalEnabled.label  = Globally enabled
+pref.alert.globalEnabled.help   = When enabled, all alerts configured may be shown. When disabled, no alerts will be shown. Provides nothing more than a global toggle.
+pref.alert.enabled.label        = Enabled
+pref.alert.enabled.help         = When enabled, popups are shown for this view.
+pref.alert.nonFocusedOnly.label = Only when window not active
+pref.alert.nonFocusedOnly.help  = When enabled, all message notifications are supressed when the window is active. Otherwise, message notifications for non-active views will be shown. Unchecking is suggested for channel moderators or for low traffic channels.
+pref.alert.channel.event.label  = Alert for Channel Event
+pref.alert.channel.event.help   = Shows message notifications for joins, parts, kicks, usermodes, and any other system messages. Suggested for channel moderators or for low traffic channels.
+pref.alert.channel.chat.label   = Alert for Channel Chat
+pref.alert.channel.chat.help    = Show message notifications for normal chat messages. It may be annoying for high traffic channels. Suggested for moderators or for low traffic channels.
+pref.alert.channel.stalk.label  = Alert for Channel Stalk
+pref.alert.channel.stalk.help   = Shows message notifications for messages containing stalk words.
+pref.alert.user.chat.label      = Alert for User Chat
+pref.alert.user.chat.help       = Shows message notifications for private messages.
+pref.bugKeyword.label           = Bug Keywords
+pref.bugKeyword.help            = You can define multiple issue tracker keywords as a regular expression perhaps by separating them with "|" e.g. bug|issue|case|ticket
+pref.group.general.palert.label        = Message notifications
+pref.group.global.palertconfig.label   = Message notifications configuration
