--- a/ja/extensions/irc/chrome/chatzilla.properties
+++ b/ja/extensions/irc/chrome/chatzilla.properties
@@ -1771,9 +1771,9 @@ pref.group.global.log.help             = 各ビューに標準のログ収集の
 pref.group.global.maxLines.label       = スクロールバックサイズ
 pref.group.global.maxLines.help        = そのビューの種類に表示するテキストの行数です。制限数に達してからは、新しい行が追加されると古い行から削除されていきます。
 pref.group.global.sounds.label         = 音声の設定
-pref.group.global.sounds.help          = 
-pref.group.global.soundEvts.label      = 音声イベント
-pref.group.global.soundEvts.help       = クライアントイベントに音声を鳴らします。この設定では、"beep" (ビープ音) または file: URL をスペース区切りのリストにします。
+pref.group.general.sounds.help          = 
+pref.group.general.soundEvts.label      = 音声イベント
+pref.group.general.soundEvts.help       = クライアントイベントに音声を鳴らします。この設定では、"beep" (ビープ音) または file: URL をスペース区切りのリストにします。
 
 # These are the prefs that get grouped #
 
@@ -1828,3 +1828,32 @@ pref.queryBeep.label            = メッセージのクエリ
 pref.queryBeep.help             = 
 pref.stalkBeep.label            = 重要なメッセージ
 pref.stalkBeep.help             = 
+
+# Append missing english strings to end of file
+# Ensuring SeaMonkey 2.32 can build
+msg.alert.icon.off = Message notifications are off. Click the icon to start showing notifications for new messages.
+msg.alert.icon.on  = Message notifications are on. Click the icon to stop showing notifications for new messages.
+msg.supports.caps = Supported capabilities: %S"
+msg.supports.capsOn = Enabled capabilities: %S"
+msg.caps.list = Available capabilities: %S"
+msg.caps.on = Capability %S enabled.
+msg.caps.off = Capability %S disabled.
+msg.caps.error = Capability %S is invalid.
+pref.alert.globalEnabled.label  = Globally enabled
+pref.alert.globalEnabled.help   = When enabled, all alerts configured may be shown. When disabled, no alerts will be shown. Provides nothing more than a global toggle.
+pref.alert.enabled.label        = Enabled
+pref.alert.enabled.help         = When enabled, popups are shown for this view.
+pref.alert.nonFocusedOnly.label = Only when window not active
+pref.alert.nonFocusedOnly.help  = When enabled, all message notifications are supressed when the window is active. Otherwise, message notifications for non-active views will be shown. Unchecking is suggested for channel moderators or for low traffic channels.
+pref.alert.channel.event.label  = Alert for Channel Event
+pref.alert.channel.event.help   = Shows message notifications for joins, parts, kicks, usermodes, and any other system messages. Suggested for channel moderators or for low traffic channels.
+pref.alert.channel.chat.label   = Alert for Channel Chat
+pref.alert.channel.chat.help    = Show message notifications for normal chat messages. It may be annoying for high traffic channels. Suggested for moderators or for low traffic channels.
+pref.alert.channel.stalk.label  = Alert for Channel Stalk
+pref.alert.channel.stalk.help   = Shows message notifications for messages containing stalk words.
+pref.alert.user.chat.label      = Alert for User Chat
+pref.alert.user.chat.help       = Shows message notifications for private messages.
+pref.bugKeyword.label           = Bug Keywords
+pref.bugKeyword.help            = You can define multiple issue tracker keywords as a regular expression perhaps by separating them with "|" e.g. bug|issue|case|ticket
+pref.group.general.palert.label        = Message notifications
+pref.group.global.palertconfig.label   = Message notifications configuration
