--- a/it/dom/chrome/dom/dom.properties
+++ b/it/dom/chrome/dom/dom.properties
@@ -144,3 +144,4 @@ KeyNameDeadKeysWarning = I valori che iniziano con “Dead” per KeyboardEvent.
 ImportXULIntoContentWarning = L’importazione di nodi XUL nel contenuto di un documento è deprecata. Questa funzione potrebbe essere rimossa a breve.
 XMLDocumentLoadPrincipalMismatch = L’utilizzo di document.load è proibito su documenti provenienti da altre finestre. Solo la finestra in cui il documento è stato creato può chiamare .load sul documento stesso. Al suo posto è preferibile utilizzare XMLHttpRequest.
 IndexedDBTransactionAbortNavigation = Una transazione IndexedDB incompleta è stata annullata dalla navigazione nella pagina.
+WillChangeBudgetWarning = Il consumo di memoria richiesto da will-change è eccessivo. La superficie è costituita da %1$S px, il “budget” è la superficie del documento moltiplicata per %2$S (%3$S px). Tutte le occorrenze di will-change nel documento vengono ignorate una volta esaurito il budget.
