--- a/nl/browser/chrome/browser/aboutPrivateBrowsing.properties
+++ b/nl/browser/chrome/browser/aboutPrivateBrowsing.properties
@@ -3,4 +3,4 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 title=U navigeert privé
-title.normal=Privévenster openen?
+title.normal=Een privévenster openen?
