--- a/nl/browser/chrome/browser/preferences/preferences.properties
+++ b/nl/browser/chrome/browser/preferences/preferences.properties
@@ -15,11 +15,11 @@ labelDefaultFont=Standaard (%S)
 
 #### Permissions Manager
 
-cookiepermissionstext=U kunt aangeven welke websites altijd of nooit toestemming hebben om cookies te gebruiken. Typ het exacte adres van de website die u wilt beheren en klik vervolgens op Blokkeren, Toestaan voor sessie of Toestaan.
+cookiepermissionstext=U kunt opgeven welke websites altijd of nooit toestemming hebben om cookies te gebruiken. Typ het exacte adres van de website die u wilt beheren en klik vervolgens op Blokkeren, Toestaan voor sessie of Toestaan.
 cookiepermissionstitle=Uitzonderingen - Cookies
-addonspermissionstext=U kunt aangeven welke websites toestemming hebben om add-ons te installeren. Typ het exacte adres van de website die u toestemming wilt geven en klik vervolgens op Toestaan.
+addonspermissionstext=U kunt opgeven welke websites toestemming hebben om add-ons te installeren. Typ het exacte adres van de website die u toestemming wilt geven en klik vervolgens op Toestaan.
 addons_permissions_title=Websites met toestemming - Installatie van add-ons
-popuppermissionstext=U kunt aangeven welke websites toestemming hebben om pop-upvensters te openen. Typ het exacte adres van de website die u toestemming wilt geven en klik vervolgens op Toestaan.
+popuppermissionstext=U kunt opgeven welke websites toestemming hebben om pop-upvensters te openen. Typ het exacte adres van de website die u toestemming wilt geven en klik vervolgens op Toestaan.
 popuppermissionstitle=Websites met toestemming - Pop-ups
 invalidURI=Vul een geldige hostnaam in
 invalidURITitle=Ongeldige hostnaam ingevuld
