--- a/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -8,7 +8,7 @@ history-panelmenu.tooltiptext2 = Uw geschiedenis tonen (%S)
 
 privatebrowsing-button.label = Nieuw privévenster
 # LOCALIZATION NOTE(privatebrowsing-button.tooltiptext): %S is the keyboard shortcut
-privatebrowsing-button.tooltiptext = Een nieuw privévenster openen (%S)
+privatebrowsing-button.tooltiptext = Een nieuw privénavigatievenster openen (%S)
 
 save-page-button.label = \u00adPagina opslaan
 # LOCALIZATION NOTE(save-page-button.tooltiptext3): %S is the keyboard shortcut
