--- a/nl/browser/chrome/browser/loop/loop.properties
+++ b/nl/browser/chrome/browser/loop/loop.properties
@@ -128,7 +128,7 @@ sync_contacts_button=Contacten synchroniseren
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Sorry, importeren van contacten mislukt
-import_failed_description_some=Een aantal contacten konden niet worden geïmporteerd
+import_failed_description_some=Sommige contacten konden niet worden geïmporteerd
 import_failed_support_button=Help
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
@@ -307,7 +307,7 @@ rooms_list_deleteConfirmation_label=Weet u het zeker?
 rooms_list_no_current_conversations=Geen huidige gesprekken
 rooms_name_this_room_label=Dit gesprek een naam geven
 rooms_name_this_room_tooltip2=Klik om de gespreksnaam te bewerken
-rooms_name_change_failed_label=Gesprek kan niet hernoemd worden
+rooms_name_change_failed_label=Gesprek kan niet worden hernoemd
 rooms_new_room_button_label=Een gesprek beginnen
 rooms_only_occupant_label=U bent de eerste hier.
 rooms_panel_title=Kies of begin een nieuw gesprek
@@ -316,4 +316,4 @@ rooms_room_full_call_to_action_nonFx_label=Download {{brandShortname}} om zelf e
 rooms_room_full_call_to_action_label=Meer info over {{clientShortname}} »
 rooms_room_joined_label=Iemand neemt deel aan het gesprek!
 rooms_room_join_label=Deelnemen aan het gesprek
-rooms_signout_alert=Open gesprekken zullen gesloten worden
+rooms_signout_alert=Geopende gesprekken zullen worden gesloten
