[S] browser: Bug 1016825 - Show legacy-Sync-to-Firefox-Accounts migration notifications in the main browser window

--- a/it/browser/chrome/browser/accounts.properties
+++ b/it/browser/chrome/browser/accounts.properties
@@ -2,5 +2,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-needUser = È necessario utilizzare %S per la sincronizzazione
-needVerifiedUser = %S non è verificato
+needUserShort = È necessario utilizzare %S per la sincronizzazione
+needUserLong = Abbiamo riprogettato Sync al fine di renderlo più semplice per gli utenti. Passa a Firefox Account per mantenere attiva la sincronizzazione.
+upgradeToFxA.label = Aggiorna
+upgradeToFxA.accessKey = A
+needVerifiedUserShort = %S non è verificato
+needVerifiedUserLong = Aprire il link di verifica contenuto nell’email inviata a %S
+resendVerificationEmail.label = Reinvia email
+resendVerificationEmail.accessKey = R
