Update browser, and add search UI strings

--- a/zh-TW/browser/chrome/browser/loop/loop.properties
+++ b/zh-TW/browser/chrome/browser/loop/loop.properties
@@ -263,7 +263,7 @@ legal_text_privacy = 隱私權保護政策
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
-powered_by_beforeLogo=是由
+powered_by_beforeLogo=Powered by
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=您的通話品質如何？
@@ -308,7 +308,7 @@ rooms_list_delete_tooltip=刪除通話
 rooms_list_deleteConfirmation_label=您確定嗎？
 rooms_list_no_current_conversations=目前沒有通話
 rooms_name_this_room_label=命名此通話
-rooms_new_room_button_label=開啟一個對話
+rooms_new_room_button_label=開始對話
 rooms_only_occupant_label=您是第一個來的。
 rooms_panel_title=選擇對話，或進行一場新對話
 rooms_room_full_label=此對話中已經有兩個人。
