Seamonkey 2.33 SV-se update

--- a/sv-SE/suite/chrome/common/notification.properties
+++ b/sv-SE/suite/chrome/common/notification.properties
@@ -16,14 +16,10 @@ carbonfailurepluginsMessage.button.label=Starta om i 32-bitarsläge
 carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=Ytterligare insticksmoduler erfordras för att visa all media på den här sidan.
-missingpluginsMessage.button.label=Installera erforderliga insticksmoduler…
-missingpluginsMessage.button.accesskey=I
 
 blockedpluginsMessage.title=Några insticksmoduler som erfordras för den här sidan har blockerats för ditt beskydd.
 blockedpluginsMessage.infoButton.label=Detaljer…
 blockedpluginsMessage.infoButton.accesskey=D
-blockedpluginsMessage.searchButton.label=Uppdatera insticksmoduler…
-blockedpluginsMessage.searchButton.accesskey=U
 
 crashedpluginsMessage.title=Insticksmodulen %S plugin har kraschat.
 crashedpluginsMessage.reloadButton.label=Ladda om sida
@@ -185,8 +181,10 @@ updatePromptCheckButton.accesskey=U
 SecurityTitle=Säkerhetsvarning
 MixedContentMessage=Du har valt en krypterad sida som innehåller viss okrypterad information. Information som du ser eller skriver på denna sida kan enkelt ses av tredje person.
 MixedActiveContentMessage=Du har valt en krypterad sida som innehåller osäker information. Information som du ser eller skriver på denna sida kan enkelt ses av tredje person.
+TrackingContentMessage=Delar av denna sida kanske spårar din aktivitet på nätet.
 MixedDisplayContentMessage=Du har valt en sida som enbart är delvis krypterad och förhindrar inte avlyssning.
 BlockedActiveContentMessage=Osäker information på den här sidan blockerades.
+BlockedTrackingContentMessage=Delar av sidan som spårar din aktivitet på nätet blockerades.
 BlockedDisplayContentMessage=Okrypterad information på den här sidan blockerades.
 EnterInsecureMessage=Du har lämnat en krypterad sida. Information som du ser eller skriver från och med nu kan enkelt läsas av tredje person.
 EnterSecureMessage=Du har valt en krypterad sida. Webbplatsen har identifierat sig själv korrekt, och information som du ser eller skriver på denna sida kan inte enkelt ses av tredje person.
